Fix nav alignment

--- a/_assets/sass/components/_nav.sass
+++ b/_assets/sass/components/_nav.sass
@@ -71,7 +71,7 @@
       margin: 0 auto
       overflow: hidden
       padding: #{(4 / 3) * $baseline}
-      text-indent: 100%
+      text-indent: 200%
       transition: none
       white-space: nowrap
 
